--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <h2>EL EJERCICIO ES OPCIONAL</h2>
                     <h3>EL MOVIMIENTO ES OBLIGATORIO</h3>
                     <p>Hola, mi nombre es Fernando Carballo, soy Licenciado en Kinesiología y Fisiatría. Soy de Argentina, me especializo en Rehabilitacion Deportiva y Evaluaciones Funcionales</p>
-                    <img src="./assets/img/IMG_20200703_140125311_BURST000_COVER_TOP (1).jpg" width="400vh">
+                    <img src="./assets/img/IMG_20200703_140125311_BURST000_COVER_TOP (1).jpg" width="60%">
                     <section class="fuente20px">
                         <article>
                             <!--para poner noticias por ejermplo-->
@@ -77,7 +77,7 @@
                         </article>
                     </section>
                     <div>
-                        <img src="./assets/img/WhatsApp Image 2023-03-06 at 11.58.45 AM.jpeg" width="600vh">
+                        <img src="./assets/img/WhatsApp Image 2023-03-06 at 11.58.45 AM.jpeg" width="90%">
                         <p>En esta pagina podrás encontrar información sobre cursos y fechas</p>
                     </div>
                 </main>
