--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Un poco sobre mí">
         <meta name="keywords" content="rehabilitación, kinesiología, ejercicios, evaluaciones">
-        <title>Rehabilitación y movimiento</title>
+        <title>Rehabilitación y Movimiento</title>
         <!--icono navegador favicom-->
         <link rel="shortcut icon" href="./assets/img/dumbell.ico">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -66,7 +66,8 @@
 
                     <h2>EL EJERCICIO ES OPCIONAL</h2>
                     <h3>EL MOVIMIENTO ES OBLIGATORIO</h3>
-                    <p>Hola, mi nombre es Fernando Carballo, soy Licenciado en Kinesiología y Fisiatría. Soy de Argentina, me especializo en Rehabilitacion Deportiva y Evaluaciones Funcionales</p>
+                    <p>Hola, mi nombre es Fernando Carballo, soy Licenciado en Kinesiología y Fisiatría. Soy de Argentina, me especializo en Rehabilitacion Deportiva y Evaluaciones Funcionales.</p>
+                    <p>Tranajo en el Centro de Rehabilitación e Investigación Dr. E. Maradona de la Ciudad de Santa Fe, uno de los centros mas grandes del País, y tambien soy docente de la carrera de Grado Licenciatura en Kinesiología y Fisiatría</p>
                     <img src="./assets/img/IMG_20200703_140125311_BURST000_COVER_TOP (1).jpg" width="60%">
                     <section class="fuente20px">
                         <article>
