--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <!--icono navegador favicom-->
         <link rel="shortcut icon" href="./assets/img/dumbell.ico" alt="logo">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
         <link rel="stylesheet" href="./scss/estilos.css">
         <script src="https://kit.fontawesome.com/2e31b07d2d.js" crossorigin="anonymous"></script>
     </head>
@@ -67,7 +68,7 @@
                     <h2>EL EJERCICIO ES OPCIONAL</h2>
                     <h3>EL MOVIMIENTO ES OBLIGATORIO</h3>
                     <p>Hola, mi nombre es Fernando Carballo, soy Licenciado en Kinesiología y Fisiatría. Soy de Argentina, me especializo en Rehabilitacion Deportiva y Evaluaciones Funcionales.</p>
-                    <p>Tranajo en el Centro de Rehabilitación e Investigación Dr. E. Maradona de la Ciudad de Santa Fe, uno de los centros mas grandes del País, y tambien soy docente de la carrera de Grado Licenciatura en Kinesiología y Fisiatría</p>
+                    <p>Trabajo en el Centro de Rehabilitación e Investigación Dr. E. Maradona de la Ciudad de Santa Fe, uno de los centros mas grandes del País, y tambien soy Docente de la carrera de Grado Licenciatura en Kinesiología y Fisiatría</p>
                     <img src="./assets/img/IMG_20200703_140125311_BURST000_COVER_TOP (1).jpg" width="60%" alt="foto mia">
                     <section class="fuente20px">
                         <article>
@@ -75,14 +76,21 @@
                             <!--puedo poner imagenes articulos h1 et<-->
                             <p>Me gusta enseñar a los pacientes a moverse mejor, para que conozcan sus puntos debiles, puedan aumentar sus capacidades, disminuir el dolor o mejorar su rendimiento y sean independientes.
                             Utilizo sistemas de FMS, SFMA y EXOS. Si queres aprender como rehabilitar a tus pacientes desde el movimiento o desde una mirada mas activa, entrá a Fechas para conocer los proximos cursos.
-                            </p>
+                            </p>                                <div class="container contenedorAnimaciones">
+                                <div class="row">
+                                    <div data-aos="slide-left" data-aos-delay="600" class="col-12 mb-5">
+                                        <div>
+                                            <div width="90%">
+                                            <img src="./assets/img/WhatsApp Image 2023-03-06 at 11.58.45 AM.jpeg" width="90%" data-aos="slide-right" data-aos-delay="600" class="card-title">
+                                            <p>En esta pagina podrás encontrar información sobre cursos y fechas</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         
                         </article>
                     </section>
-                    <div>
-                        <img src="./assets/img/WhatsApp Image 2023-03-06 at 11.58.45 AM.jpeg" width="90%" alt="imagen del grupo">
-                        <p>En esta pagina podrás encontrar información sobre cursos y fechas</p>
-                    </div>
                 </main>
             </div>
 
@@ -128,6 +136,10 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+<script>
+AOS.init();
+</script>
 
 
 </body>
