--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </a>
                 </div>
 
-                <div class="contenedorTitulo"  alt="titulo index">
+                <div class="contenedorTitulo">
                     <h1>REHABILITACIÓN Y MOVIMIENTO</h1>
                 </div>
             </header>
@@ -37,7 +37,7 @@
         </div>
 
         <div class="row">
-            <div class="col-sm-12 col-md-3">
+            <div class="col-sm-12 col-md-2 col-lg-2 col-xl-2">
 
                 <nav class="navegacion" alt="navegacion">
                     <!--esto es una lista desordenada de navegacion-->
@@ -61,7 +61,7 @@
                 </nav>
             </div>
 
-            <div class="col-sm-12 col-md-6">
+            <div class="col-sm-12 col-md-8 col-lg-8 col-xl-8">
 
                 <main class="main">
 
@@ -76,25 +76,20 @@
                             <!--puedo poner imagenes articulos h1 et<-->
                             <p>Me gusta enseñar a los pacientes a moverse mejor, para que conozcan sus puntos debiles, puedan aumentar sus capacidades, disminuir el dolor o mejorar su rendimiento y sean independientes.
                             Utilizo sistemas de FMS, SFMA y EXOS. Si queres aprender como rehabilitar a tus pacientes desde el movimiento o desde una mirada mas activa, entrá a Fechas para conocer los proximos cursos.
-                            </p>                                <div class="container contenedorAnimaciones">
-                                <div class="row">
-                                    <div data-aos="slide-left" data-aos-delay="600" class="col-12 mb-5">
-                                        <div>
-                                            <div width="90%">
-                                            <img src="./assets/img/WhatsApp Image 2023-03-06 at 11.58.45 AM.jpeg" width="90%" data-aos="slide-right" data-aos-delay="600" class="card-title">
-                                            <p>En esta pagina podrás encontrar información sobre cursos y fechas</p>
-                                            </div>
-                                        </div>
-                                    </div>
+                            </p> 
+                        </article>                               
+
+                                <div>
+                                <img src="./assets/img/WhatsApp Image 2023-03-06 at 11.58.45 AM.jpeg" width="90%" data-aos="slide-right" data-aos-delay="600">
+                                <p>En esta pagina podrás encontrar información sobre cursos y fechas</p>
                                 </div>
-                            </div>
+                  
                         
-                        </article>
                     </section>
                 </main>
             </div>
 
-            <div class="col-sm-12 col-md-3">
+            <div class="col-sm-12 col-md-2">
                 <aside class="aside" alt="publicidad">
                     ASIDE
                     <div>
@@ -106,7 +101,7 @@
         </div>
 
         <div class="row">
-            <div class="col-12">
+            <div class="">
 
                 <footer class="footer" alt="footer">
 
