--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
                     <!--esto es una lista desordenada de navegacion-->
                     <ul>
                     <li>
-                        <a class="linkNav" href="#">Inicio</a>
+                        <a class="linkNav underline" href="#">Inicio</a>
                     </li>
                     <li>
-                        <a class="linkNav" href="./page/fechas.html">Fechas</a>
+                        <a class="linkNav underline" href="./page/fechas.html">Fechas</a>
                     </li>
                     <li>
-                        <a class="linkNav" href="./page/galeria.html">Galeria</a>
+                        <a class="linkNav underline" href="./page/galeria.html">Galeria</a>
                     </li>
                     <li>
-                        <a class="linkNav" href="./page/sistemas.html">Sistemas</a>
+                        <a class="linkNav underline" href="./page/sistemas.html">Sistemas</a>
                     </li>
                     <li>
-                        <a class="linkNav" href="./page/contacto.html">Contacto</a>
+                        <a class="linkNav underline" href="./page/contacto.html">Contacto</a>
                     </li> 
                     </ul>
                 </nav>
@@ -66,9 +66,10 @@
                 <main class="main">
 
 
-                    <p>En esta pagina podrás encontrar información sobre cursos y fechas para Kinesiólogos</p>
-                    <p>Hola, mi nombre es Fernando Carballo, soy Licenciado en Kinesiología y Fisiatría. Soy de Argentina, me especializo en Rehabilitacion Deportiva y Evaluaciones Funcionales.</p>
-                    <p>Soy Desertante del Curso Rehabilitación y Movimiento, en el cúal enseñoa  kinesiólogos otra forma de evaluar tratar al paciente.</p>
+                    
+                    <p>Mi nombre es Fernando Carballo, soy Licenciado en Kinesiología y Fisiatría. Soy de Argentina, me especializo en Rehabilitacion Deportiva y Evaluaciones Funcionales.</p>
+                    <p>Soy Desertante del Curso Rehabilitación y Movimiento, en el cúal enseñoa colegas otra forma de evaluar tratar al paciente.</p>
+                    <p>En esta pagina podrás encontrar información y fechas del curso destinado a Kinesiólogos</p>
                     <img src="./assets/img/IMG_20200703_140125311_BURST000_COVER_TOP (1).jpg" width="40%" alt="foto mia">
                     <section class="fuente20px">
                         <article>
@@ -80,7 +81,7 @@
                         </article>                               
 
                                 <div>
-                                <img src="./assets/img/WhatsApp Image 2023-03-06 at 11.58.45 AM.jpeg" width="50%" data-aos="slide-right" data-aos-delay="600">
+                                <img src="./assets/img/WhatsApp Image 2023-03-06 at 11.58.45 AM.jpeg" width="60%" data-aos="slide-right" data-aos-delay="600">
                                 <h2>EL EJERCICIO ES OPCIONAL</h2>
                                 <h3>EL MOVIMIENTO ES OBLIGATORIO</h3>
                                 
@@ -93,9 +94,9 @@
 
             <div class="col-sm-12 col-md-2">
                 <aside class="aside" alt="publicidad">
-                    ASIDE
+                    <!--ASIDE-->
                     <div>
-                        ACA VA LA PUBLICIDAD
+                        <!--ACA VA LA PUBLICIDAD-->
                     </div>
                 </aside>
             </div>            
